[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features=["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["postgres_pool"] }
postgres = "0.19.1"
jsonwebtoken = "7.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
