[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["postgres_pool"] }
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.1", features = ["derive"] }
jsonwebtoken = "7.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.4"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
eyre = "0.6.5"
